# chattolib

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  robochatto.db  robochatto.env
src/chattolib/: __init__.py  client.py  exceptions.py  queries.py  subscriptions.py  types.py
tests/: test_client.py  test_integration.py
