[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chattolib"
version = "0.1.0"
description = "Async Python client library for the Chatto webchat GraphQL API"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Felix", email = "chatto@f3l1x.it" },
]
keywords = ["chatto", "graphql", "async", "webchat", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.27",
    "websockets>=13.0",
]

[project.urls]
Homepage = "https://chat.chatto.run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
